--- a/style.css
+++ b/style.css
@@ -3869,6 +3869,9 @@
             font-size: 22px;
             font-weight: 700;
             margin-left: auto;
+            position: relative;
+            z-index: 10;
+            pointer-events: auto;
         }
         
         .chore-item-checkbox.checked {
